@@ -52,9 +52,11 @@ Christian Hitz
 Christopher Ellis
 Claude Routhier
 Colin Wilding
+Daniel Tonda Castillo
 David Rogers
 Francisco Vila
 Harald Wellmann
+Johannes Schindelin
 J. Leung
 Karim Haddad
 Karl Hammar
@@ -63,6 +65,7 @@ Kieren MacMillian
 Lee T. Wilkirson
 Mark Dewey
 Markus Schneider
+Matti Aaltonen
 Michael Meixner
 Michael Welsh Duggan
 Orm Finnendahl
